fix: contribution notice spacing on mobile

--- a/web-application/client/components/notices/ContributionNotice/ContributionNotice.css
+++ b/web-application/client/components/notices/ContributionNotice/ContributionNotice.css
@@ -15,7 +15,9 @@
 .contribution-notice .contribution-grid {
     display: grid;
     margin: 50px auto 0 auto;
-    grid-template-columns: repeat(auto-fit, 260px);
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    align-items: center;
+    justify-items: center;
 
 }
 .contribution-notice .additional-contributions {
